fix: tolerate null values in request data and engine hints
Map.copyOf rejects null values, so a realistic payload like
data.put(middleName, null) crashed GenerationRequest construction
with a raw NullPointerException before generate() was even called.
Both records now use a null-tolerant unmodifiable copy.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>